@@ -5,8 +5,8 @@ Links: overview-links.h usage-links.h support-links.h
 <ul>
 <li>Free software.<br><br>
 
-<li>Written entirely in <a href="http://www.python.org/" TARGET="Resource Window">Python</a>:
-an interpreted, interactive, object-oriented programming language.
+<li>Written entirely in <a href="http://www.python.org/" TARGET="Resource Window">
+Python</a>: an interpreted, interactive, object-oriented programming language.
 <br><br>
 
 <li>Active and open development.<br><br>
@@ -29,13 +29,16 @@ an interpreted, interactive, object-oriented programming language.
 
 <li>Pattern matching using Unix shell-style wildcard characters.<br><br>
 
-<li>Supports DBM/GDBM style databases.<br><br>
+<li>Supports DBM and <a href="http://cr.yp.to/cdb.html" TARGET="Resource Window">
+CDB</a> databases.<br><br>
 
 <li>Optional delivery logging.<br><br>
 
 <li>Easy customization of confirmation messages through templates.<br><br>
 
-<li>Uses <a href="http://www-cse.ucsd.edu/users/mihir/papers/hmac.html" TARGET="Resource Window">HMAC</a>
-(Hashed Message Authentication Codes) for "cookie" generation and verification.<br><br>
+<li>Uses 
+<a href="http://www-cse.ucsd.edu/users/mihir/papers/hmac.html" TARGET="Resource Window">
+HMAC</a> (Hashed Message Authentication Codes) for "cookie" generation and verification.
+<br><br>
 
 </ul>
