@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Tue Nov 20 14:34:21 2001 -->
+<!-- Sun Dec  2 22:53:30 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -130,8 +130,8 @@ Author
 <ul>
 <li>Free software.<br><br>
 
-<li>Written entirely in <a href="http://www.python.org/" TARGET="Resource Window">Python</a>:
-an interpreted, interactive, object-oriented programming language.
+<li>Written entirely in <a href="http://www.python.org/" TARGET="Resource Window">
+Python</a>: an interpreted, interactive, object-oriented programming language.
 <br><br>
 
 <li>Active and open development.<br><br>
@@ -154,14 +154,17 @@ an interpreted, interactive, object-oriented programming language.
 
 <li>Pattern matching using Unix shell-style wildcard characters.<br><br>
 
-<li>Supports DBM/GDBM style databases.<br><br>
+<li>Supports DBM and <a href="http://cr.yp.to/cdb.html" TARGET="Resource Window">
+CDB</a> databases.<br><br>
 
 <li>Optional delivery logging.<br><br>
 
 <li>Easy customization of confirmation messages through templates.<br><br>
 
-<li>Uses <a href="http://www-cse.ucsd.edu/users/mihir/papers/hmac.html" TARGET="Resource Window">HMAC</a>
-(Hashed Message Authentication Codes) for "cookie" generation and verification.<br><br>
+<li>Uses 
+<a href="http://www-cse.ucsd.edu/users/mihir/papers/hmac.html" TARGET="Resource Window">
+HMAC</a> (Hashed Message Authentication Codes) for "cookie" generation and verification.
+<br><br>
 
 </ul>
 
